<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>csshell</groupId>
  <artifactId>flute-csshell</artifactId>
  <version>1.0</version>
  <name>FLUTE CS-Shell</name>
  <description>CS-Shell  and other Java classes for FLUTE project</description>
  <properties>

    <maven.compiler.target>17</maven.compiler.target>
    <maven.compiler.source>17</maven.compiler.source>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <commons-collections.ver>3.2.2</commons-collections.ver>
    <commons-configuration.ver>1.10</commons-configuration.ver>
    <log4j.ver>2.21.1</log4j.ver>
    <commons-io.ver>2.15.0</commons-io.ver>
    <commons-lang.ver>2.6</commons-lang.ver>
    <commons-lang3.ver>3.13.0</commons-lang3.ver>
    <javax.mail.ver>1.6.2</javax.mail.ver>
    <jca.ver>2.4.8</jca.ver>
    <junit.ver>4.13.2</junit.ver>
    <junit-jupiter-api.ver>5.10.1</junit-jupiter-api.ver>
    <!-- Use command line to incluse tests -DskipTests=false -->
    <skipTests>true</skipTests>
    
    <csshellSource>https://scm.ibpt.kit.edu/scm/svn/flute/controls/java/FLUTE-JavaCommon/trunk</csshellSource>
    <csshellLink>https://share.flute.ibpt.kit.edu/smbshare/Controlsystem/Maven/site/csshell/</csshellLink>
    <csshellLinkFlute>https://share.flute.ibpt.kit.edu/smbshare/Controlsystem/Maven/site/flute-csshell/</CsshellLinkFlute>
    
  </properties>

  <profiles>
  <profile>
    <id>github</id>
    <properties>
      <csshellSource>https://github.com/KIT-IBPT/epics-cs-shell-flute</csshellSource>
      <csshellLink>https://kit-ibpt.github.io/epics-cs-shell/</csshellLink>
      <csshellLinkFlute>https://kit-ibpt.github.io/epics-cs-shell-flute/</csshellLinkFlute>
    </properties>
    <distributionManagement>
    <site>
      <id>github</id>
      <url>scm:git:ssh://git@github.com/KIT-IBPT/epics-cs-shell-flute.git</url>
    </site>
    </distributionManagement>
    <build>
    <plugins>
      <plugin>
      <groupId>org.apache.maven.plugins</groupId>
      <artifactId>maven-scm-publish-plugin</artifactId>
      <version>3.2.1</version>
      <configuration>
        <scmBranch>gh-pages</scmBranch>
      </configuration>
      </plugin>
    </plugins>
    </build>
  </profile>
  </profiles>



  <build>
    <sourceDirectory>src/main/java</sourceDirectory>
    <resources>
      <resource>
        <directory>src/main/java</directory>
        <filtering>false</filtering>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-install-plugin</artifactId>
        <version>3.1.1</version>
        <executions>
          <execution>
            <id>install-tine</id>
            <phase>initialize</phase>
            <goals>
                <goal>install-file</goal>
            </goals>
            <configuration>
                <file>lib/tine.jar</file>
                <groupId>csshell</groupId>
                <artifactId>tine</artifactId>
                <version>1.0</version>
                <packaging>jar</packaging>
            </configuration>
          </execution>
          <execution>
            <id>install-jdoocs</id>
            <phase>initialize</phase>
            <goals>
                <goal>install-file</goal>
            </goals>
            <configuration>
                <file>lib/jdoocs.jar</file>
                <groupId>csshell</groupId>
                <artifactId>jdoocs</artifactId>
                <version>1.0</version>
                <packaging>jar</packaging>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>${maven.compiler.source}</source>
          <target>${maven.compiler.target}</target>
          <encoding>${project.build.sourceEncoding}</encoding>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.2.2</version>
        <configuration>
          <skipTests>${skipTests}</skipTests>
          <argLine>
            --add-opens=java.base/java.lang=ALL-UNNAMED
            --add-opens=java.base/java.util=ALL-UNNAMED
          </argLine>
        </configuration>
      </plugin>
      <plugin>
        <groupId>com.coderplus.maven.plugins</groupId>
        <artifactId>copy-rename-maven-plugin</artifactId>
        <version>1.0.1</version>
        <executions>
          <execution>
            <id>jar-copy</id><phase>package</phase><goals><goal>copy</goal></goals>
            <configuration>
              <sourceFile>${project.build.directory}/${project.artifactId}-${project.version}.jar</sourceFile>
              <destinationFile>${basedir}/${project.artifactId}.jar</destinationFile>
            </configuration>
          </execution>
          <execution>
            <id>jar-install</id><phase>install</phase><goals><goal>copy</goal></goals>
            <configuration>
              <sourceFile>${basedir}/${project.artifactId}.jar</sourceFile>
              <destinationFile>${basedir}/../FLUTE-Servers/lib/java/${project.artifactId}.jar</destinationFile>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>3.6.1</version>
        <executions>
          <execution>
            <phase>install</phase>
            <goals>
              <goal>copy-dependencies</goal>
            </goals>
            <configuration>
              <outputDirectory>${project.build.directory}/lib</outputDirectory>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-site-plugin</artifactId>
        <version>4.0.0-M11</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-project-info-reports-plugin</artifactId>
        <version>3.4.5</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.6.2</version>
        <configuration>
          <defaultAuthor>igor@scictrl.com</defaultAuthor>
          <fixTags>author,param,return,throws,link</fixTags>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <reporting>
    <plugins>
      <plugin>
        <artifactId>maven-javadoc-plugin</artifactId>
        <configuration>
          
        </configuration>
      </plugin>
    </plugins>
  </reporting>
  <repositories>
    <repository>
      <id>FLUTE-repo</id>
      <name>FLUTE local Maven repository</name>
      <url>file://${basedir}/../FLUTE-Maven-Repository/repository</url>
    </repository>
  </repositories>
  <dependencies>
    <dependency>
      <groupId>csshell</groupId>
      <artifactId>anka-common</artifactId>
      <version>1.0</version>
    </dependency>
    <dependency>
      <groupId>csshell</groupId>
      <artifactId>csshell</artifactId>
      <version>2.0</version>
    </dependency>
    <dependency>
      <groupId>csshell</groupId>
      <artifactId>csshell</artifactId>
      <version>2.0</version>
      <classifier>tests</classifier>
      <type>test-jar</type>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>csshell</groupId>
      <artifactId>jdoocs</artifactId>
      <version>1.0</version>
    </dependency>
    <dependency>
      <groupId>csshell</groupId>
      <artifactId>tine</artifactId>
      <version>1.0</version>
    </dependency>
    <dependency>
      <groupId>commons-collections</groupId>
      <artifactId>commons-collections</artifactId>
      <version>${commons-collections.ver}</version>
    </dependency>
    <dependency>
      <groupId>commons-configuration</groupId>
      <artifactId>commons-configuration</artifactId>
      <version>${commons-configuration.ver}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-api</artifactId>
      <version>${log4j.ver}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-core</artifactId>
      <version>${log4j.ver}</version>
    </dependency>
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>${commons-io.ver}</version>
    </dependency>
    <dependency>
      <groupId>commons-lang</groupId>
      <artifactId>commons-lang</artifactId>
      <version>${commons-lang.ver}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <version>${commons-lang3.ver}</version>
    </dependency>
    <dependency>
      <groupId>com.sun.mail</groupId>
      <artifactId>javax.mail</artifactId>
      <version>${javax.mail.ver}</version>
    </dependency>
    <dependency>
      <groupId>org.epics</groupId>
      <artifactId>jca</artifactId>
      <version>${jca.ver}</version>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junit.ver}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>${junit-jupiter-api.ver}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <distributionManagement>
    <site>
      <id>smb</id>
      <name>FLUTE Samba server</name>
      <url>file://${env.HOME}/smbshare/Controlsystem/Maven/site/${project.artifactId}</url>
    </site>
  </distributionManagement>
</project>
